--- a/requirements.txt
+++ b/requirements.txt
@@ -1,26 +1,45 @@
+altair==5.5.0
+attrs==25.3.0
+blinker==1.9.0
+cachetools==6.2.0
 certifi==2025.1.31
 charset-normalizer==3.4.1
+click==8.2.1
+colorama==0.4.6
 contourpy==1.3.1
 cycler==0.12.1
 docutils==0.21.2
+et_xmlfile==2.0.0
 fonttools==4.56.0
+gitdb==4.0.12
+GitPython==3.1.45
 id==1.5.0
 idna==3.10
 jaraco.classes==3.4.0
 jaraco.context==6.0.1
 jaraco.functools==4.1.0
+Jinja2==3.1.6
+jsonschema==4.25.1
+jsonschema-specifications==2025.9.1
 keyring==25.6.0
 kiwisolver==1.4.8
 markdown-it-py==3.0.0
+MarkupSafe==3.0.2
 matplot==0.1.9
 matplotlib==3.10.1
 mdurl==0.1.2
 more-itertools==10.6.0
+narwhals==2.4.0
 nh3==0.2.21
 numpy==2.2.4
+openpyxl==3.1.5
 packaging==24.2
 pandas==2.2.3
 pillow==11.1.0
+plotly==6.3.0
+protobuf==6.32.0
+pyarrow==21.0.0
+pydeck==0.9.1
 Pygments==2.19.1
 pyloco==0.0.139
 pyparsing==3.2.3
@@ -28,18 +47,27 @@ python-dateutil==2.9.0.post0
 pytz==2025.2
 pywin32-ctypes==0.2.3
 readme_renderer==44.0
+referencing==0.36.2
 requests==2.32.3
 requests-toolbelt==1.0.0
 rfc3986==2.0.0
 rich==13.9.4
+rpds-py==0.27.1
 seaborn==0.13.2
 setuptools==78.1.0
 SimpleWebSocketServer==0.1.2
 six==1.17.0
+smmap==5.0.2
+streamlit==1.49.1
+tenacity==9.1.2
+toml==0.10.2
+tornado==6.5.2
 twine==6.1.0
 typing==3.7.4.3
+typing_extensions==4.15.0
 tzdata==2025.2
 urllib3==2.3.0
 ushlex==0.99.1
+watchdog==6.0.0
 websocket-client==1.8.0
 wheel==0.45.1
